# serializer version: 1
# name: test_all_entities[assist][conversation.sonar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'conversation',
    'entity_category': None,
    'entity_id': 'conversation.sonar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'conversation': dict({
        'should_expose': False,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'perplexity',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ConversationEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'test_subentry_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[assist][conversation.sonar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sonar',
      'supported_features': <ConversationEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'conversation.sonar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[no_assist][conversation.sonar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'conversation',
    'entity_category': None,
    'entity_id': 'conversation.sonar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'conversation': dict({
        'should_expose': False,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'perplexity',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_subentry_id',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[no_assist][conversation.sonar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sonar',
      'supported_features': <ConversationEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'conversation.sonar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_default_prompt
  list([
    dict({
      'attachments': None,
      'content': 'hello',
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'role': 'user',
    }),
    dict({
      'agent_id': 'conversation.sonar',
      'content': 'Hello, how can I help you?',
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'native': None,
      'role': 'assistant',
      'thinking_content': None,
      'tool_calls': None,
    }),
  ])
# ---
# name: test_function_call[True]
  list([
    dict({
      'attachments': None,
      'content': 'Please call the test function',
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'role': 'user',
    }),
    dict({
      'agent_id': 'conversation.sonar',
      'content': None,
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'native': None,
      'role': 'assistant',
      'thinking_content': None,
      'tool_calls': list([
        dict({
          'external': False,
          'id': 'call_call_1',
          'tool_args': dict({
            'param1': 'call1',
          }),
          'tool_name': 'test_tool',
        }),
      ]),
    }),
    dict({
      'agent_id': 'conversation.sonar',
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'role': 'tool_result',
      'tool_call_id': 'call_call_1',
      'tool_name': 'test_tool',
      'tool_result': 'value1',
    }),
    dict({
      'agent_id': 'conversation.sonar',
      'content': 'I have successfully called the function',
      'created': HAFakeDatetime(2024, 5, 24, 12, 0, tzinfo=datetime.timezone.utc),
      'native': None,
      'role': 'assistant',
      'thinking_content': None,
      'tool_calls': None,
    }),
  ])
# ---
